Fix possible leak if username is empty.  Bug 129212, patch by Mikael Parknert <mikael@parknert.se>, r=dmose, sr=bienvenu